Add a layout and some CSS

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,12 @@
 <main>
   <div class="masthead">
     <div class="content-wrapper">
-      <h1>Get inspired. Create your bucket list. Share.</h1>
+      <h1>Deciding what to read next? Create your own book list and share with friends.</h1>
       <form method="get" action=" ">
         <div class="input-inline">
-          <label class="input-group__label" for="banner-search-input">Inspire me</label>
+          <label class="input-group__label" for="banner-search-input">Search books by title or author name</label>
           <div class="input-row">
-            <input id="banner-search-input" class="input-row__field" type="text" name="search" placeholder="e.g. Swimming with dolphins">
+            <input id="banner-search-input" class="input-row__field" type="text" name="search" placeholder="e.g. Ernest Hemingway">
             <button class="btn btn--inline" type="submit">Search</button>
           </div>
         </div>
@@ -14,85 +14,88 @@
     </div>
   </div>
   <div class="content-wrapper">
-    <h2>Some ideas</h2>
+    <h2>Some reviews</h2>
     <ul class="bare-list float-grid css-grid">
       <li class="card">
           <div class="card__thumb">
-            <a href="ideas/northern-lights.html">
-              <img src="http://fpoimg.com/255x170" alt="Northern lights over mountain covered in snow">
+            <a href="reviews/northern-lights.html">
+              <img src="https://a.wattpad.com/cover/102961866-288-k750646.jpg" alt="The Brothers Three: Book Cover One">
             </a>
             <div class="card__intro">
-              <h4 class="card__title">See the Northern lights</h4>
-              <span>1,598 have done this</span>
+              <h4 class="card__title">The Brothers Three: Book One of The Blackwood Saga</h4>
+              <span>by Layton Green</span>
+              <p>Have you ever wondered what it would be like to be plunged into a dangerous fantasy world?</p>
             </div>
           </div>
           <div class="card__footer">
-            <button class="card__btn card__like delta" data-like="see-the-northern-lights">
+            <button class="card__btn card__like delta" data-like="the-brothers-three-cover-book">
               <svg class="icon-heart" role="presentation">
                 <use href="/images/icons/icons-defs.svg#heart"></use>
               </svg>
               Like
             </button>
-            <button class="card__btn card__add delta" data-addGoal="see-the-northern-lights">
+            <button class="card__btn card__add delta" data-addBook="the-brothers-three-cover-book">
               <svg class="icon-pluss" role="presentation">
                 <use href="/images/icons/icons-defs.svg#pluss"></use>
               </svg>
-              Add Goal
+              Add Book
             </button>
           </div>
       </li>
       <li class="card">
         <div class="card__thumb">
-          <a href="ideas/one-example-idea.html">
-            <img src="http://fpoimg.com/255x170" alt="Placeholder image for templating">
+          <a href="reviews/one-example-review.html">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/51tnVg9xsCL.jpg" alt="The Spirit Mage book Cover">
           </a>
           <div class="card__intro">
-            <h4 class="card__title">Something anything onething much longer text something</h4>
-            <span>109,598,324 have done this</span>
+            <h4 class="card__title">The Spirit Mage (The Blackwood Saga Book 2)</h4>
+            <span>by Layton Green</span>
+            <p>Valjean thought about how impossible it seemed that there was another world out there from which he had narrowly escaped. A world of manticores and cave fiends, magic swords and potions, spirit mages and...</p>
           </div>
         </div>
         <div class="card__footer">
-          <button class="card__btn card__like delta" data-like="something-anything-onething-much-longer-text-something">
+          <button class="card__btn card__like delta" data-like="the-spirit-mage-(the-blackwood-saga-book-2)">
             <svg class="icon-heart" role="presentation">
               <use href="/images/icons/icons-defs.svg#heart"></use>
             </svg>
             Like
           </button>
-          <button class="card__btn card__add delta" data-addGoal="something-anything-onething-much-longer-text-something">
+          <button class="card__btn card__add delta" data-addBook="the-spirit-mage-(the-blackwood-saga-book-2)">
             <svg class="icon-pluss" role="presentation">
               <use href="/images/icons/icons-defs.svg#pluss"></use>
             </svg>
-            Add Goal
+            Add Book
           </button>
         </div>
       </li>
       <li class="card">
         <div class="card__thumb">
-          <a href="ideas/one-example-idea.html">
-            <img src="http://fpoimg.com/255x170" alt="Placeholder image for templating">
+          <a href="reviews/one-example-review.html">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/51Y4lfspuGL.jpg" alt="The Last Cleric book cover">
           </a>
           <div class="card__intro">
-            <h4 class="card__title">Short</h4>
-            <span>1 has done this</span>
+            <h4 class="card__title">The Last Cleric (The Blackwood Saga Book 3)</h4>
+            <span>by Layton Green</span>
+            <p>"An extraordinary new series" - Book Reader's Heaven</p>
           </div>
         </div>
         <div class="card__footer">
-          <button class="card__btn card__like delta" data-like="see-the-northern-lights">
+          <button class="card__btn card__like delta" data-like="the-last-cleric">
             <svg class="icon-heart" role="presentation">
               <use href="/images/icons/icons-defs.svg#heart"></use>
             </svg>
             Like
           </button>
-          <button class="card__btn card__add delta" data-addGoal="see-the-northern-lights">
+          <button class="card__btn card__add delta" data-addBook="the-last-cleric">
             <svg class="icon-pluss" role="presentation">
               <use href="/images/icons/icons-defs.svg#pluss"></use>
             </svg>
-            Add Goal
+            Add Book
           </button>
         </div>
       </li>
     </ul>
-  </div>
+
   <div class="see-more">
     <button class="btn" type="button" data-more="true">See more</button>
   </div>
