--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,11 @@
     <%= csp_meta_tag %>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
 
     <header>
-
-      <!-- <div class="siteHeader__topFullImageContainer" data-reactid=".vbbddinkzk.0">
-
-          <img alt="Goodreads Summer Reading 2019" class="siteHeader__topFullImage" src="https://wallpaperhd.wiki/wp-content/uploads/hd-backgrounds-for-banner-wallpaper.wiki-cool-backgrounds-hd-1080p-wallpaper-pic-wpe0014677.jpg">
-          </img>
-
-      </div> -->
 
       <div class="site-header">
         <div class="content-wrapper">
