Use asset_url method
This is to reference background image and icons

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,13 +30,13 @@
           <div class="card__footer">
             <button class="card__btn card__like delta" data-like="the-brothers-three-cover-book">
               <svg class="icon-heart" role="presentation">
-                <use href="/images/icons/icons-defs.svg#heart"></use>
+                <use xlink:href="<%= asset_url("icons/icons-defs.svg" + "#heart") %>"></use>
               </svg>
               Like
             </button>
             <button class="card__btn card__add delta" data-addBook="the-brothers-three-cover-book">
               <svg class="icon-pluss" role="presentation">
-                <use href="/images/icons/icons-defs.svg#pluss"></use>
+                <use xlink:href="<%= asset_url("icons/icons-defs.svg" + "#pluss") %>"></use>
               </svg>
               Add Book
             </button>
@@ -56,13 +56,13 @@
         <div class="card__footer">
           <button class="card__btn card__like delta" data-like="the-spirit-mage-(the-blackwood-saga-book-2)">
             <svg class="icon-heart" role="presentation">
-              <use href="/images/icons/icons-defs.svg#heart"></use>
+              <use xlink:href="<%= asset_url("icons/icons-defs.svg" + "#heart") %>"></use>
             </svg>
             Like
           </button>
           <button class="card__btn card__add delta" data-addBook="the-spirit-mage-(the-blackwood-saga-book-2)">
             <svg class="icon-pluss" role="presentation">
-              <use href="/images/icons/icons-defs.svg#pluss"></use>
+              <use xlink:href="<%= asset_url("icons/icons-defs.svg" + "#pluss") %>"></use>
             </svg>
             Add Book
           </button>
@@ -82,13 +82,13 @@
         <div class="card__footer">
           <button class="card__btn card__like delta" data-like="the-last-cleric">
             <svg class="icon-heart" role="presentation">
-              <use href="/images/icons/icons-defs.svg#heart"></use>
+              <use xlink:href="<%= asset_url("icons/icons-defs.svg" + "#heart") %>"></use>
             </svg>
             Like
           </button>
           <button class="card__btn card__add delta" data-addBook="the-last-cleric">
             <svg class="icon-pluss" role="presentation">
-              <use href="/images/icons/icons-defs.svg#pluss"></use>
+              <use xlink:href="<%= asset_url("icons/icons-defs.svg" + "#pluss") %>"></use>
             </svg>
             Add Book
           </button>
