--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1412,7 +1412,7 @@ table {
    ========================================================================== */
 
 .masthead {
-    background: #afbac4 url("https://wallpaperhd.wiki/wp-content/uploads/hd-backgrounds-for-banner-wallpaper.wiki-cool-backgrounds-hd-1080p-wallpaper-pic-wpe0014677.jpg") no-repeat 50% 50% / cover;
+    background: #afbac4 asset-url("colorful-image.jpg") no-repeat 50% 50% / cover;
     border-bottom: 1px solid #e3e5e9;
     padding: 1.6rem 0;
     margin: 0 0 6.4rem;
