Extract _form partial from reviews#new view
Make use of link_to and form_tag helpers methods to make the app more dynamic

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,7 +27,7 @@
         </li>
       <% end %>
     </ul>
-
+  </div>
   <div class="see-more">
     <button class="btn" type="button" data-more="true">See more</button>
   </div>
