--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,27 +1,7 @@
 <main>
   <div class="content-wrapper">
     <h1>Create new review</h1>
-    <%= form_tag(reviews_create_path, class: 'global-search') do %>
-      <div class="input-group input-group--horizontal">
-        <label class="input-group__label" for="title">Book Title</label>
-        <%= text_field_tag('book_title', nil, class: 'input-group__field', placeholder: 'E.g. Fifty Shades of Grey') %>
-      </div>
-      <div class="input-group input-group--horizontal">
-        <label class="input-group__label" for="done_count">Body</label>
-        <%= text_field_tag('body', nil, class: 'input-group__field', placeholder: ' What is the book about?') %>
-      </div>
-      <div class="input-group input-group--horizontal">
-        <label class="input-group__label" for="photo_url">Image Url</label>
-        <%= text_field_tag('image_url', nil, class: 'input-group__field', placeholder: 'Add an image link') %>
-      </div>
-      <div class="input-group input-group--horizontal">
-        <label class="input-group__label" for="photo_url">Author</label>
-        <%= text_field_tag('author', nil, class: 'input-group__field', placeholder: 'Author of the book') %>
-      </div>
-      <div class="prompt">
-        <a class="prompt__cancel" href="#cancel">Cancel</a>
-        <%= button_tag('Create review', class: 'btn btn--primary prompt__confirm') %>
-      </div>
-    <% end %>
+    <%= render(partial: 'form', locals: { review: @review }) %>
   </div>
 </main>
+<br><br>
