--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>BookReviews</title>
+    <title>Book Reviews</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -15,7 +15,7 @@
       <div class="site-header">
         <div class="content-wrapper">
           <div class="logo">
-            <%= link_to('<span>Bo<i>okRev</i>iews</span>'.html_safe, root_path) %>
+            <%= link_to('<span>Bo<i>ok Rev</i>iews</span>'.html_safe, root_path) %>
           </div>
           <nav class="siteHeader__primaryNavInline">
             <ul class="main-navigation">
@@ -26,7 +26,7 @@
                 <a class="nav-link" href="/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#nolink">My reviews</a>
+                <%= link_to('My Reviews', account_reviews_path) %>
               </li>
             </ul>
           </nav>
@@ -34,7 +34,7 @@
           <nav class="siteHeader__personal">
             <ul class="main-navigation">
               <li class="nav-item">
-                <a class="nav-link" href="/users/new">Log In</a>
+                <%= link_to('Log In', new_user_path) %>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -59,7 +59,7 @@
     <footer class="site-footer">
       <div class="content-wrapper">
         <div class="logo logo--inverted footer__logo">
-          <%= link_to('<span>Bo<i>okRev</i>iews</span>'.html_safe, root_path) %>
+          <%= link_to('<span>Bo<i>ok Rev</i>iews</span>'.html_safe, root_path) %>
         </div>
         <nav class="footer__navigation">
           <ul>
