--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -7,7 +7,7 @@
       <div class="media__body">
         <div class="goal">
           <div class="goal__owner">
-            <img class="avatar" src="#images/avatar.png" alt="Portrait of Frederick Rose">
+            <img class="avatar" src="/images/avatar.png" alt="Portrait of Frederick Rose">
             <p>Created by
               <a href="#">Frederick Rose</a>
             </p>
@@ -33,7 +33,7 @@
           </ul>
           <div class="goal__intro">
             <p>
-              We can put a text body about our Review here!
+              <%= @review.body %>
             </p>
           </div>
           <div class="goal__meta">
