--- a/app/views/account/_editable_review_card.html.erb
+++ b/app/views/account/_editable_review_card.html.erb
@@ -1,13 +1,13 @@
 <div class="card">
   <div class="card__thumb">
-    <a href="reviews/aurora-in-search-of-the-northern-lights.html">
+    <%= link_to(show_review_path(review)) do %>
       <img src="http://fpoimg.com/255x170" alt="Aurora in search of the northern lights">
-    </a>
     <div class="card__intro">
       <h4 class="card__title"><%= review.book_title %></h4>
       <span>by <%= review.author %></span>
       <p><%= review.body %></p>
     </div>
+    <% end %>
   </div>
   <div class="card__footer">
     <button class="btn delta" type="submit">
