--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,7 +23,7 @@
                               author: review.author,
                               body: review.body,
                               image_url: review.image_url,
-                              review: review }) %>
+                              review: 1 }) %>
         </li>
       <% end %>
     </ul>
