Make use of path helpers to edit each Review

--- a/app/views/account/_editable_review_card.html.erb
+++ b/app/views/account/_editable_review_card.html.erb
@@ -16,7 +16,7 @@
       </svg>
       Delete
     </button>
-    <a class="btn delta" href="#no-link">
+    <a class="btn delta" href="<%= edit_review_path(review) %>">
       <svg class="icon-edit" role="presentation">
         <use xlink:href="<%= asset_url("icons/icons-defs.svg" + "#edit") %>"></use>
       </svg>
